<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/dialog_bg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/dialog_tip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_tip_title"
            android:textColor="#858484"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <com.guppy.phoneclean.widget.AutoSplitTextView
            android:id="@+id/dialog_tip_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="3"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:text="@string/string_tip_text"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="cancel"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textAllCaps="true"
                android:textColor="@color/col_54DEBE"
                android:background="@drawable/color_dg_bg_window2"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_dialog_line"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/delete_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="delete"
                android:gravity="center"
                android:textAllCaps="true"
                android:background="@drawable/color_dg_bg_window"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:textSize="14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>