<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F9F9F9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#4DE3C2">

        <ImageView
            android:id="@+id/toolbar_left_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@mipmap/ic_exit" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Setting"
            android:textColor="#ffffffff"
            android:textSize="17sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rela_notification"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/notification_permission"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Don't miss every reminder of potential risks"
                android:textColor="#ff989898"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_switch_back" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rela_battery"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/battery_optimization"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="The app continues to work for you, with a quick cleanup anytime"
                android:textColor="#ff989898"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_switch_back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/privacy_agreement"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="The privacy agreement related to the application, you need to understand"
                android:textColor="#ff989898"
                android:textSize="10sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rela_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/about_more"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Version and permissions, etc. plus instructions, you need to know!"
                android:textColor="#ff989898"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/vistin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="1.0.0"
            android:textColor="#ff989898"
            android:textSize="10sp" />
    </RelativeLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.guppy.phoneclean.ad.Banner
            android:visibility="gone"
            android:id="@+id/ad_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.guppy.phoneclean.ad.PangleBanner
            android:id="@+id/pangle_ad"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</LinearLayout>